<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_4"
    app:cardElevation="0dp"
    app:strokeColor="@color/colorGray"
    app:strokeWidth="0.6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/hfa"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_8"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/circularImageView"
            app:srcCompat="@drawable/avatar" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/vdi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_big"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/uxh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_4"
            android:textSize="@dimen/text_smaller"
            app:fontFamily="@font/open_sans_light_italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/axs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/follow"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_tiny"
                android:textStyle="bold"
                android:visibility="gone"
                app:icon="@drawable/ic_add_white_24"
                app:iconTint="#FFFFFF" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/qyx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableStart="@drawable/ic_check_circle_outline_primary_18"
                android:gravity="center"
                android:padding="@dimen/padding_16"
                android:text="@string/following"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_smallest"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_8">

                <TextView
                    android:id="@+id/toa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_smaller"
                    app:fontFamily="@font/roboto" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posts"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_tiny"
                    app:fontFamily="@font/open_sans_light" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding_8">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/wrr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_smaller"
                    app:fontFamily="@font/roboto" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_tiny"
                    app:fontFamily="@font/open_sans_light" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>