<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/iup"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/drawable_primary_gradient"
        android:elevation="@dimen/toolbar_elevation"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4"

        android:layout_marginBottom="@dimen/margin_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_8"
                android:paddingTop="@dimen/margin_4"
                android:paddingEnd="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_4"
                android:text="@string/account"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/cyc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/padding_8"
                android:paddingTop="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_20">

                <TextView
                    android:id="@+id/jpq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/doh"
                    android:layout_alignParentStart="true"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    android:text="@string/pref_title_display_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_person_primary_24" />

                <TextView
                    android:id="@+id/zsv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/jpq"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/margin_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <ImageView
                    android:id="@+id/doh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_keyboard_arrow_right_primary_24" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:id="@+id/fgt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:paddingStart="@dimen/padding_8"
                android:paddingTop="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_20">

                <TextView
                    android:id="@+id/hdf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/cxy"
                    android:layout_alignParentStart="true"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    android:text="@string/pref_title_display_id"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_alternate_email_primary_24" />

                <TextView
                    android:id="@+id/kas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hdf"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/margin_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

                <ImageView
                    android:id="@+id/cxy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_keyboard_arrow_right_primary_24" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_8"
                android:background="?android:attr/listDivider" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/padding_8"
                android:paddingTop="@dimen/padding_20"
                android:paddingEnd="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_20">

                <TextView
                    android:id="@+id/yfq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    android:text="@string/pref_title_joined"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_date_primary_24" />

                <TextView
                    android:id="@+id/jvt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/yfq"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="@dimen/margin_4"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>