<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/pzi"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="?attr/actionBarSize"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/circularImageView"
                    app:srcCompat="@drawable/avatar" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:gravity="center_vertical"
                    android:text="Alien Walker"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_bigger"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="@dimen/margin_20"
                    android:layout_marginEnd="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_8"
                    android:gravity="center_vertical"
                    android:text="\@alan_232"
                    app:fontFamily="@font/open_sans_light_italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_8"
                            android:text="12K"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/posts"
                            android:textAllCaps="true"
                            android:textSize="@dimen/text_smallest"
                            app:fontFamily="@font/open_sans_light" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_8"
                            android:text="127"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textAllCaps="true"
                            android:textSize="@dimen/text_smallest"
                            app:fontFamily="@font/open_sans_light" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="@dimen/padding_8">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_8"
                            android:layout_marginEnd="@dimen/margin_8"
                            android:text="1.5K"
                            android:textColor="#FFFFFF"
                            android:textSize="@dimen/text_big" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/following"
                            android:textAllCaps="true"
                            android:textSize="@dimen/text_smallest"
                            app:fontFamily="@font/open_sans_light" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cvh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:overScrollMode="never"
                    android:paddingBottom="@dimen/spacing_bottom_for_fragment" />

                <androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/dne"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/margin_20" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fej"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:animateLayoutChanges="true"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlay" />

</RelativeLayout>